bitfield/tests/fail/bad-base-type-3.rs
use bitfield::bitfield;

bitfield! {
    struct Bitfield: u128 {
        
    }
}

fn main() {
    
}
